a few tweaks have been made

--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -1,7 +1,11 @@
 {
+  "Language": "Dil",
   "Create": "Oluştur",
   "Close": "Kapat",
   "Cancel": "İptal",
+  "Save": "Kaydet",
+  "Edit": "Düzenle",
+  "Crop": "Kes",
   "New Folder": "Yeni Klasör",
   "New File": "Yeni Dosya",
   "Rename": "Yeniden Adlandır",
@@ -11,11 +15,12 @@
   "Archive": "Arşivle",
   "Unarchive": "Arşivden çıkar",
   "Open": "Aç",
+  "Open containing folder": "İçeren klasörü aç",
   "Refresh": "Yenile",
   "Preview": "Önizleme",
   "Dark Mode": "Karanlık Mod",
   "Toggle Full Screen": "Tam ekran",
-  "Change View": "Görüntü değiştir",
+  "Change View": "Görünümü değiştir",
   "Storage": "Depo",
   "Go up a directory": "Yukarı git",
   "Search anything..": "Herhangi bir şey ara..",
