--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,11 @@
 {
+  "Language": "Language",
   "Create": "Create",
   "Close": "Close",
   "Cancel": "Cancel",
+  "Save": "Save",
+  "Edit": "Edit",
+  "Crop": "Crop",
   "New Folder": "New Folder",
   "New File": "New File",
   "Rename": "Rename",
@@ -11,6 +15,7 @@
   "Archive": "Archive",
   "Unarchive": "Unarchive",
   "Open": "Open",
+  "Open containing folder": "Open containing folder",
   "Refresh": "Refresh",
   "Preview": "Preview",
   "Dark Mode": "Dark Mode",
