validation & error messages part 2

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -56,5 +56,7 @@
   "Files moved." : "Files moved.",
   "Files deleted." : "Files deleted.",
   "The file unarchived." : "The file unarchived.",
-  "The file(s) archived." : "The file(s) archived."
+  "The file(s) archived." : "The file(s) archived.",
+  "Updated." : "Updated.",
+  "No search result found." : "No search result found."
 }
