--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -58,5 +58,6 @@
   "The file unarchived." : "The file unarchived.",
   "The file(s) archived." : "The file(s) archived.",
   "Updated." : "Updated.",
-  "No search result found." : "No search result found."
+  "No search result found." : "No search result found.",
+  "Are you sure you want to move these files?" : "Are you sure you want to move these files?"
 }
