--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -58,5 +58,6 @@
   "The file is unarchived." : "Dosya arşivden çıkarıldı.",
   "The file(s) is archived." : "Dosyalar arşivlendi.",
   "Updated." : "Güncellendi.",
-  "No search result found." : "Arama sonucu bulunamadı."
+  "No search result found." : "Arama sonucu bulunamadı.",
+  "Are you sure you want to move these files?" : "Bu dosyaları taşımak istediğinize emin misiniz?"
 }
