update translation & cleanup

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -59,5 +59,7 @@
   "The file(s) archived." : "The file(s) archived.",
   "Updated." : "Updated.",
   "No search result found." : "No search result found.",
-  "Are you sure you want to move these files?" : "Are you sure you want to move these files?"
+  "Are you sure you want to move these files?" : "Are you sure you want to move these files?",
+  "File Size": "File Size",
+  "Last Modified": "Last Modified"
 }
