--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -59,5 +59,7 @@
   "The file(s) is archived." : "Dosyalar arşivlendi.",
   "Updated." : "Güncellendi.",
   "No search result found." : "Arama sonucu bulunamadı.",
-  "Are you sure you want to move these files?" : "Bu dosyaları taşımak istediğinize emin misiniz?"
+  "Are you sure you want to move these files?" : "Bu dosyaları taşımak istediğinize emin misiniz?",
+  "File Size": "Dosya Boyutu",
+  "Last Modified": "Son Değişiklik"
 }
