add multi touch gesture to enable/disable drag&drop
 in order to handle scrolling issue on ios devices (which is forced hidden)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -61,5 +61,7 @@
   "No search result found." : "No search result found.",
   "Are you sure you want to move these files?" : "Are you sure you want to move these files?",
   "File Size": "File Size",
-  "Last Modified": "Last Modified"
+  "Last Modified": "Last Modified",
+  "Drag&Drop: on": "Drag&Drop: on",
+  "Drag&Drop: off": "Drag&Drop: off"
 }
