Fix wrong german word

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -49,7 +49,7 @@
     "Are you sure you want to delete these files?": "Sind Sie sicher, dass Sie diese Dateien löschen möchten?",
     "This action cannot be undone.": "Diese Aktion kann nicht rückgängig gemacht werden.",
     "Search results for": "Suchergebnisse für",
-    "item(s) selected.": "Artikel ausgewählt.",
+    "item(s) selected.": "Element(e) ausgewählt.",
     "%s is renamed.": "%s wurde umbenannt.",
     "This is a readonly storage.": "Dies ist ein schreibgeschützter Speicher.",
     "%s is created.": "%s wurde erstellt.",
