perf: 增加无权限提示

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,7 +21,7 @@
   "Dark Mode": "Dark Mode",
   "Toggle Full Screen": "Toggle Full Screen",
   "Change View": "Change View",
-  "Storage" : "Storage",
+  "Storage": "Storage",
   "Go up a directory": "Go up a directory",
   "Search anything..": "Search anything..",
   "Name": "Name",
@@ -36,7 +36,7 @@
   "Yes, Move!": "Yes, Move!",
   "Delete files": "Delete files",
   "Yes, Delete!": "Yes, Delete!",
-  "Upload Files" : "Upload Files",
+  "Upload Files": "Upload Files",
   "No files selected!": "No files selected!",
   "Select Files": "Select Files",
   "Archive the files": "Archive the files",
@@ -48,21 +48,22 @@
   "Create a new file": "Create a new file",
   "Are you sure you want to delete these files?": "Are you sure you want to delete these files?",
   "This action cannot be undone.": "This action cannot be undone.",
-  "Search results for" : "Search results for",
+  "Search results for": "Search results for",
   "item(s) selected.": "item(s) selected.",
-  "%s is renamed." : "%s is renamed.",
-  "This is a readonly storage." : "This is a readonly storage.",
-  "%s is created." : "%s is created.",
-  "Files moved." : "Files moved.",
-  "Files deleted." : "Files deleted.",
-  "The file unarchived." : "The file unarchived.",
-  "The file(s) archived." : "The file(s) archived.",
-  "Updated." : "Updated.",
-  "No search result found." : "No search result found.",
-  "Are you sure you want to move these files?" : "Are you sure you want to move these files?",
+  "%s is renamed.": "%s is renamed.",
+  "This is a readonly storage.": "This is a readonly storage.",
+  "%s is created.": "%s is created.",
+  "Files moved.": "Files moved.",
+  "Files deleted.": "Files deleted.",
+  "The file unarchived.": "The file unarchived.",
+  "The file(s) archived.": "The file(s) archived.",
+  "Updated.": "Updated.",
+  "No search result found.": "No search result found.",
+  "Are you sure you want to move these files?": "Are you sure you want to move these files?",
   "File Size": "File Size",
   "Last Modified": "Last Modified",
   "Drag&Drop: on": "Drag&Drop: on",
   "Drag&Drop: off": "Drag&Drop: off",
-  "The selected file exceeds the maximum file size. You cannot upload files greater than %s": "The selected file exceeds the maximum file size. You cannot upload files greater than %s"
+  "The selected file exceeds the maximum file size. You cannot upload files greater than %s": "The selected file exceeds the maximum file size. You cannot upload files greater than %s",
+  "No permission": "No permission to access this directory, please contact the administrator."
 }
