--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -50,19 +50,20 @@
   "This action cannot be undone.": "Bu işlem geri alınamaz.",
   "Search results for": "Arama sonuçları:",
   "item(s) selected.": "dosya seçildi.",
-  "%s is renamed." : "%s yeniden adlandırılmıştır.",
-  "This is a readonly storage." : "Bu salt okunur bir depolama alanıdır.",
-  "%s is created." : "%s başarıyla oluşturulmuştur.",
-  "Files moved." : "Dosyalar taşındı.",
-  "Files deleted." : "Dosyalar silindi.",
-  "The file is unarchived." : "Dosya arşivden çıkarıldı.",
-  "The file(s) is archived." : "Dosyalar arşivlendi.",
-  "Updated." : "Güncellendi.",
-  "No search result found." : "Arama sonucu bulunamadı.",
-  "Are you sure you want to move these files?" : "Bu dosyaları taşımak istediğinize emin misiniz?",
+  "%s is renamed.": "%s yeniden adlandırılmıştır.",
+  "This is a readonly storage.": "Bu salt okunur bir depolama alanıdır.",
+  "%s is created.": "%s başarıyla oluşturulmuştur.",
+  "Files moved.": "Dosyalar taşındı.",
+  "Files deleted.": "Dosyalar silindi.",
+  "The file is unarchived.": "Dosya arşivden çıkarıldı.",
+  "The file(s) is archived.": "Dosyalar arşivlendi.",
+  "Updated.": "Güncellendi.",
+  "No search result found.": "Arama sonucu bulunamadı.",
+  "Are you sure you want to move these files?": "Bu dosyaları taşımak istediğinize emin misiniz?",
   "File Size": "Dosya Boyutu",
   "Last Modified": "Son Değişiklik",
   "Drag&Drop: on": "Sürükle&Bırak: etkin",
   "Drag&Drop: off": "Sürükle&Bırak: devre dışı",
-  "The selected file exceeds the maximum file size. You cannot upload files greater than %s": "Seçilen dosya maksimum dosya boyutunu aşıyor. %s'den büyük dosyaları yükleyemezsiniz."
+  "The selected file exceeds the maximum file size. You cannot upload files greater than %s": "Seçilen dosya maksimum dosya boyutunu aşıyor. %s'den büyük dosyaları yükleyemezsiniz.",
+  "No permission": "Bu dizine erişim izniniz yok, lütfen yöneticiyle iletişime geçin."
 }
