--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -64,5 +64,6 @@
   "Last Modified": "תאריך שינוי",
   "Drag&Drop: on": "מצב גרירה: פעיל",
   "Drag&Drop: off": "מצב גרירה: כבוי",
-  "The selected file exceeds the maximum file size. You cannot upload files greater than %s": "הקובץ הנבחר חורג ממגבלת המקסימום של גודל קובץ. לא ניתן להעלות קובץ גדול מ-%s"
+  "The selected file exceeds the maximum file size. You cannot upload files greater than %s": "הקובץ הנבחר חורג ממגבלת המקסימום של גודל קובץ. לא ניתן להעלות קובץ גדול מ-%s",
+  "No permission": "אין הרשאה לגשת לתיקייה זו, נא ליצור קשר עם המנהל."
 }
