--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -21,7 +21,7 @@
   "Dark Mode": "حالت شب",
   "Toggle Full Screen": "تمام تصویر کردن",
   "Change View": "تغییر نوع نمایش",
-  "Storage" : "فضا",
+  "Storage": "فضا",
   "Go up a directory": "برو به پوشه",
   "Search anything..": "به دنبال چه چیزی هستید ؟ جستجو کنید ...",
   "Name": "نام",
@@ -36,7 +36,7 @@
   "Yes, Move!": "بله، انتقال بده!",
   "Delete files": "پاک کردن فایل ها",
   "Yes, Delete!": "بله، پاک کن!",
-  "Upload Files" : "آپلود کردن فایل ها",
+  "Upload Files": "آپلود کردن فایل ها",
   "No files selected!": "هیچ فایلی انتخاب نشده است.",
   "Select Files": "انتخاب فایل ها",
   "Archive the files": "فشرده سازی فایل ها",
@@ -48,21 +48,22 @@
   "Create a new file": "ایجاد فایل جدید",
   "Are you sure you want to delete these files?": "آیا از حذف فایل ها مطمئن هستید ؟",
   "This action cannot be undone.": "این تغییرات قابل بازگشت نیست!",
-  "Search results for" : "نتیجه جستجو برای",
+  "Search results for": "نتیجه جستجو برای",
   "item(s) selected.": "آیتم(های) انتخاب شده",
-  "%s is renamed." : "تغییر نام برای %s صورت گرفت.",
-  "This is a readonly storage." : "این فضا فقط قابل خواندن است!",
-  "%s is created." : "%s ساخته شد!",
-  "Files moved." : "فایل(ها) انقال یافتند.",
-  "Files deleted." : "فایل(ها) حذف شدند.",
-  "The file unarchived." : "فایل فشرده شده باز شد.",
-  "The file(s) archived." : "فایل(ها) فشرده سازی شدند.",
-  "Updated." : "آپدیت شد.",
-  "No search result found." : "هیچ نتیجه ای یافت نشد.",
-  "Are you sure you want to move these files?" : "آیا برای انتقال فایل ها مطمئن هستید ؟",
+  "%s is renamed.": "تغییر نام برای %s صورت گرفت.",
+  "This is a readonly storage.": "این فضا فقط قابل خواندن است!",
+  "%s is created.": "%s ساخته شد!",
+  "Files moved.": "فایل(ها) انقال یافتند.",
+  "Files deleted.": "فایل(ها) حذف شدند.",
+  "The file unarchived.": "فایل فشرده شده باز شد.",
+  "The file(s) archived.": "فایل(ها) فشرده سازی شدند.",
+  "Updated.": "آپدیت شد.",
+  "No search result found.": "هیچ نتیجه ای یافت نشد.",
+  "Are you sure you want to move these files?": "آیا برای انتقال فایل ها مطمئن هستید ؟",
   "File Size": "سایز فایل",
   "Last Modified": "آخرین ویرایش",
   "Drag&Drop: on": "Drag&Drop: روشن",
   "Drag&Drop: off": "Drag&Drop: خاموش",
-  "The selected file exceeds the maximum file size. You cannot upload files greater than %s": "حداکثر ظرفیت مجاز فایل %s میباشد! فایل شما بزرگتر از این مقدار میباشد."
+  "The selected file exceeds the maximum file size. You cannot upload files greater than %s": "حداکثر ظرفیت مجاز فایل %s میباشد! فایل شما بزرگتر از این مقدار میباشد.",
+  "The selected file exceeds the maximum preview file size, please download to preview.": "حداکثر ظرفیت مجاز فایل برای پیش نمایش %s میباشد! لطفا فایل را دانلود کنید."
 }
