--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -65,5 +65,6 @@
   "Drag&Drop: on": "מצב גרירה: פעיל",
   "Drag&Drop: off": "מצב גרירה: כבוי",
   "The selected file exceeds the maximum file size. You cannot upload files greater than %s": "הקובץ הנבחר חורג ממגבלת המקסימום של גודל קובץ. לא ניתן להעלות קובץ גדול מ-%s",
-  "No permission": "אין הרשאה לגשת לתיקייה זו, נא ליצור קשר עם המנהל."
+  "No permission": "אין הרשאה לגשת לתיקייה זו, נא ליצור קשר עם המנהל.",
+  "The selected file exceeds the maximum preview file size, please download to preview.": "הקובץ הנבחר חורג ממגבלת המקסימום של גודל קובץ תצוגה מקדימה, נא להוריד קובץ זה כדי להציג אותו."
 }
